improving the text. work in progress

--- a/MIP_on_arbitrary_mesh.tex
+++ b/MIP_on_arbitrary_mesh.tex
@@ -53,7 +53,7 @@
 
 \begin{document}
 \title{Discontinuous Diffusion Synthetic Acceleration for Sn Transport on
-Arbitrary Polygonal Meshes}
+2D Arbitrary Polygonal Meshes}
 \author{} 
 \date{}
 \maketitle
