--- a/transport.tex
+++ b/transport.tex
@@ -1,30 +1,37 @@
-\section{Discretization and Solution Techniques for the $S_n$ Transport
-Equation}\label{sec_transport}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Discretization and Solution Techniques for the $S_n$ Transport Equation}\label{sec_transport}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 We recall the \sn transport equations, the iterative techniques
 employed to solve them, and discuss the PWLD discontinuous spatial
 discretization for the transport equation with an emphasis on arbitrary
 polygonal/polyhedral grids.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{The \sn Transport Equations}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Given an angular quadrature set $\{\bo_d,w_d\}_{1\leq d\leq M}$, the one-group
 \sn transport equation with isotropic source and scattering is:
 \begin{equation}
-  \(\bo_d\cdot \bn + \Sigma_t(\br)\)\psi_d (\br) = \frac{1}{4\pi} \Sigma_s
-  (\br) \phi(\br) + \frac{1}{4\pi} S (\br), \ \textrm{ for } \br \in \mc{D},\
+  \( \bo_d\cdot \bn + \Sigma_t(\br) \) \psi_d (\br) = \frac{1}{4\pi} \left( \Sigma_s
+  (\br) \phi(\br) + S (\br) \right), \ \textrm{ for } \br \in \mc{D},\
   1 \leq d \leq M,
   \label{transport_sn}
 \end{equation}
 with $\psi_d(\br) = \psi(\br,\bo_d)$ the angular flux at position $\br$ in
 direction $\bo_d$, $\Sigma_t$ and $\Sigma_s$ the total and scattering cross
 sections, respectively, and $\mc{D}$ the spatial domain. The scalar flux is
-defined as and evaluated as follows:
+defined and evaluated as follows:
 \begin{equation}
   \phi(\br) \equiv \int_{4\pi} \psi(\br,\bo) d\bo \approx \sum_{d=1}^M w_d
   \psi_d (\br).
 \end{equation}
-For brevity, we assume only incoming boundary conditions, $\psi_d(\br_b) =
-\psi_d^{inc}(\br_b)$, for any boundary $\br_b \in \partial \mc{D}_d^-
-= \{\partial \mc{D} \textrm{ such that }\bo_d \cdot \bs{n}_b <0\}$, where
-$\bs{n}_b = \bs{n}(\br_b)$ is the outward unit normal vector at the boundary. 
+For brevity, we assume only incoming boundary conditions, that is, $\psi_d(\br_b) =
+\psi_d^{inc}(\br_b)$ for any point on the inflow boundary: $\br_b \in \partial \mc{D}_d^-
+= \{\partial \mc{D} \textrm{ such that }\bo_d \cdot \bs{n}_b <0\}$, with
+$\bs{n}_b = \bs{n}(\br_b)$ the outward unit normal vector at $\br_b$. 
 \Cref{transport_sn} can be written in a compact form using operators:
 \begin{align}
   & \bs{L} \Psi = \bs{M \Sigma}\Phi + S \equiv q, \label{L_Psi}\\
@@ -34,38 +41,50 @@ where $\Psi$ is the vector of angular fluxes, $\Phi$ the scalar flux,
 $q$ is the total (scattering+external) source $\bs{L}$ is the streaming
 operator, $\bs{\Sigma}$ is the scattering matrix, $\bs{M}$ is the
 moment-to-direction operator, and $\bs{D}$ is the direction-to-moment
-operator. $\bs{L} = diag
-(\bs{L}_1,\hdots,\bs{L}_d,\hdots,\bs{L}_M)$ is a diagonal operator; given a
-total source $q$, one can solve independently for the resulting angular
+operator. $\bs{L} = diag(\bs{L}_1,\hdots,\bs{L}_d,\hdots,\bs{L}_M)$ is 
+a diagonal operator; given a total source $q$, one can solve independently 
+for the resulting angular
 fluxes in all directions. The action of $\bs{L}^{-1}$ is often referred to as
-a \emph{transport sweep} when discontinuous spatial approximations are
+a transport sweep when discontinuous spatial approximations are
 employed because, for any direction $\bo_d$, the action of $\bs{L}_d^{-1}$ can
 be obtained by traversing the mesh (i.e., sweeping) in a specific ordering of
-the cells, thus one needs only to solve a small linear system of equations,
+the cells, thus requiring only to solve a small linear system of equations,
 cell by cell. The order in which the elements are solved constitutes the graph
 of the sweep; for brevity and because this is not the focus of this article,
-we do not expand on situations where the graph can present some dependencies
+we do not expand on situations where the graph presents dependencies
 (cycles); in such a case, these dependencies can either be lagged within the
 iterative procedure \cite{dgfem} or the solution vector consisting of the scalar 
 flux is augmented by the angular fluxes that cause the cycle \cite{mip}.
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Solution Techniques}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
 \Cref{L_Psi,Phi} can be solved using the Source Iteration (SI) method (a
 stationary iterative technique also known as Richardson iteration). The SI
 techniques at the $\ell^{th}$ iteration is given by :
 \begin{equation}
   \Phi^{(\ell+1)} = \bs{DL}^{-1} \(\bs{M\Sigma}\Phi^{(\ell)} + S\).
 \end{equation}
-SI requires transport sweeps (the action of
-$\bs{L}^{-1}$ is required in both procedures). When the scattering ratio
+Alternatively, a subspace Krylov method (usually GMRes) can be employed to
+solve the system of equations:
+\begin{equation}
+  \(\bs{I} - \bs{DL}^{-1}\bs{M \Sigma}\) \Phi = \bs{DL}^{-1}S
+\end{equation}
+SI and the GMRes-based transport solves require transport sweeps (action of $\bs{L}^{-1}$).
+When the scattering ratio
 $c=\frac{\Sigma_s}{\Sigma_t}$ tends to one in optically thick domains, the
-number of SI iterations can become large. To accelerate the convergence, a DSA
-preconditioner is needed; the MIP discontinuous finite element discretization
-of the diffusion correction equation 
-is presented in \Cref{sec_mip} for arbitrary polygonal grids. 
+number of SI and GMRes iterations can become large. To speed up convergence, a DSA
+preconditioner is needed; this is further discussed in \Cref{sec_mip} for arbitrary 
+polygonal grids. 
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{Discontinuous Finite Element Discretization on Arbitrary Grids}
-The domain $\mc{D}$ is meshed into element $K$ (specifically polygons). For 
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+The domain $\mc{D}$ is partitioned into arbitrary polygons. For 
 a given streaming direction $\bo_d$, the discontinuous finite
-element scheme on a given element $K$ is given by:
+element formulation, on a given element $K$ ,is:
 \begin{equation}
   -\int_{K} \(\psi_d \bo_d \cdot \bn b + \Sigma_t \Psi_d b \)\ d\br +
   \int_{\partial K^+} \bo_d \cdot \bs{n} \Psi_d b\ d\br = \int_{K} qb\ d\br +
@@ -73,20 +92,20 @@ element scheme on a given element $K$ is given by:
   \label{transport_int}
 \end{equation}
 where $b$ represents a generic finite element basis function, $\partial K^{-}$ 
-is the inflow
-face of element $K$, $\partial K^{+}$ is the outflow face of element $K$. The
-angular flux values on an inflow face, denoted by $\psi_d^{\uparrow}$ in
-\cref{transport_int}, are taken from the upwind neighbor element of that face.
+is the inflow face of element $K$, $\partial K^{+}$ is the outflow face of 
+element $K$. The angular flux values on an inflow face, denoted by 
+$\psi_d^{\uparrow}$ in \cref{transport_int}, are taken from the upwind neighbor 
+element of that face.
 
-Next, we define the basis function $b$ for the PWLD method. First, we
+Now, we define the basis functions, $b$, for the PWLD discretization. First, we
 introduce a within-cell point $c$ inside the polygon in 2D. The coordinates 
 of $c$ are weighted averages of the vertex coordinates:
 \begin{equation}
   u_c = \sum_{j=1}^{N_V} \alpha_j u_j,
 \end{equation}
 where $u=x$ or $y$, $N_V$ is the number of vertices for the cell under
-consideration, and the weights are such that $\sum_{j=1}^{N_V} \alpha_j =1$,
-$\alpha_j \geq 0\ \forall j$. The basis function at vertex $j$ is defined by 
+consideration, and the (positive) weights $\alpha_j$ are such that $\sum_{j=1}^{N_V} \alpha_j =1$. 
+The basis function at vertex $j$ is defined by 
 \cite{pwld_2d}:
 \begin{equation}
   b_j(x,y) = t_j(x,y) + \alpha_j t_c(x,y),
@@ -98,12 +117,14 @@ and zero at all the vertices of the cell. The PWLD method employs a notion of
 sub-cells on each arbitrary polygon; the number of PWLD basis functions is 
 equal to the number of vertices in the polygon. In this paper, the arbitrary
 positive weights $\alpha_j$ are chosen to be $\frac{1}{N_V}$, thus, on a
-quadrilateral cell, one has $\alpha_j =0.25 \forall j$. Finally, note that on
-triangular (resp., tetrahedral) cells, the PWLD basis functions reduce to the
+quadrilateral cell, one has $\alpha_j =\frac{1}{4}$. Finally, note that on
+triangular cells, the PWLD basis functions reduce to the
 standard Linear Discontinuous (LD) basis functions if $\alpha_j =
 \frac{1}{3}$. Given the definition of the PWLD
-finite elements, it may seem complicated to build the mass and the gradient
+finite elements, it may seem complicated to build the elementary transport 
 matrices on an arbitrary polygonal cell but the construction of such matrices
-can be greatly simplified using the sub-cells. By looping over all of the
-sub-cells of a cell, the elementary matrices of the cell can easily be
-computed.
+can be greatly simplified using the notion of ``sub-cells'', where a ``sub-cell'',
+in 2D, is defined as the triangular cell linking an edge of the polygonal cell to its
+within-cell point. Note that these ``sub-cells'' are never created as part of the 
+polygonal grids; they are just a means to easily compute the elementary matrices of 
+a polygonal cell by loop over its sub-cells.
