finished review up to results

--- a/MIP_on_arbitrary_mesh.tex
+++ b/MIP_on_arbitrary_mesh.tex
@@ -42,6 +42,7 @@
 \renewcommand{\]}{\right]}
 
 \newcommand{\sn}{\ensuremath{S_n}\xspace}
+\newcommand{\tf}{b_i}
 
 \newtheorem{algorithm}{Algorithm}[section]
 
