--- a/algebraic_multigrid.tex
+++ b/algebraic_multigrid.tex
@@ -1,13 +1,20 @@
-\section{Algebraic Multigrid} \label{sec_amg}
-\subsection{Introduction}
-As mentioned earlier, a common way to solve a SPD system of equations is to use
-conjugate gradient preconditioned with SSOR (PCG-SSOR). {In this research, we
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{MIP-DSA Solves Based on Algebraic Multigrid Techniques} \label{sec_amg}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{Background}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+
+As mentioned above, a common way to solve a SPD system of equations is to use
+conjugate gradient preconditioned with SSOR (PCG-SSOR). In this research, we
 will compare the calculation time and the number of iterations using conjugate 
-gradient preconditioned with
-Symmetric Gauss-Seidel (PCG-SGS), which is PCG-SSOR with a
-damping factor of one, with the time needed by CG preconditioned with an
-algebraic multigrid method. PCG-SGS was chosen because it was more efficient
-than PCG-SSOR used with other damping factors. In \cite{amg_pn}, the authors 
+gradient preconditioned with Symmetric Gauss-Seidel (PCG-SGS), which is PCG-SSOR with a
+damping factor of one, to those of CG preconditioned with an
+algebraic multigrid method. PCG-SGS was chosen because little difference was noted 
+when employing other damping factors \cite{wang_personal_comm}. In \cite{amg_pn}, the authors 
 used an algebraic multigrid method to precondition the Krylov solver for the 
 even-parity finite element-spherical harmonics (FE-$P_N$) method. The AMG 
 preconditioner resulted in a 60\% reduction in the solution time compared to 
@@ -17,7 +24,7 @@ In our implementation, we have linked our code to the ML package
 ML is a multigrid preconditioning package that uses a smoothed aggregation 
 algebraic multigrid to build a preconditioner for a Krylov method. AGMG is an 
 aggregation-based algebraic multigrid code written in Fortran 90.
-
+%
 The first multigrid methods developed were geometric multigrid techniques, used as 
 stand-alone solvers. In many applications, they achieve the so-called 
 ``textbook multigrid efficiency'', i.e., ``the solution to the governing 
@@ -29,20 +36,20 @@ and particularly algebraic multigrid methods, cannot achieve such efficiency
 Krylov subspace methods. 
 
 Before describing a general multigrid method, we recall the process using a 
-two-grid method. We want to solve the following system:
+two-grid method. Assume one wants to solve the following system:
 \begin{equation}
   \bs{A}_f u_f = b_f,
 \end{equation}
-defined on the grid $\Gamma_f$. The two-grid algorithm is given by :
+defined on a fine grid $\Gamma_f$. The two-grid algorithm is given by:
 \begin{enumerate}
   \item Perform $\nu_1$ pre-smoothing iterations using a smoother (Jacobi,
     Gauss-Seidel or ILU) and an initial guess $u_0$: $u = S^{\nu_1}(u_0,b_f)$
   \item Compute the residual on the fine grid $\Gamma_f$ and restrict it to
-    the coarse grid $\Gamma_c$: $r_c = \bs{R}(b_f-\bs{A}_f u)$
-  \item Solve the system on the coarse grid: $v=\bs{A}_c^{-1} r_c$
+    the coarse grid $\Gamma_c$: $r_c = \bs{R}(b_f-\bs{A}_f u)$;
+  \item Solve the system on the coarse grid: $v=\bs{A}_c^{-1} r_c$;
   \item Interpolate the coarse grid correction to the fine grid and add the
-    correction to $u$: $u=u+\bs{P}v$
-  \item Perform $\nu_2$ post-smoothing iterations: $u = S^{\nu_2}(u,b_f)$
+    correction to $u$: $u=u+\bs{P}v$;
+  \item Perform $\nu_2$ post-smoothing iterations: $u = S^{\nu_2}(u,b_f)$.
 \end{enumerate}
 When using AMG, the matrix $\bs{A}_c$ on the coarse grid is given by the
 Galerkin approximation:
@@ -52,19 +59,19 @@ Galerkin approximation:
 where $\bs{P}$ is a prolongation matrix and $\bs{R}$ is a restriction matrix. 
 Generally, solving the system $\bs{A}_c v = r_c$ on the coarse grid is still
 quite expensive, therefore this step is recursively replaced by $n_{\gamma}$
-sequences of two-grid methods until the system can be efficiently inverted 
+sequences of the two-grid method until the system can be efficiently inverted 
 with a direct solver.
-This yields the multigrid method. When $\gamma = 1$, respectively $\gamma =
-2$, the multigrid method is said to use a $V-$cycle, respectively a $W-$cycle
-(see \Cref{fig_v_w}). 
+%This yields the multigrid method. 
+When $\gamma = 1$, respectively $\gamma =
+2$, the multigrid method is said to use a $V-$cycle, respectively a $W-$cycle. 
+In \Cref{fig_v_w}, a dot represents a smoothing operation and a square a
+direct inversion. The grid transfer operators are symbolized by lines.
 \begin{figure}[H]
   \centering
   \includegraphics[width=0.5\textwidth]{v_w_cycles}
   \caption{$V-$ and $W-$cycles.}
   \label{fig_v_w}
 \end{figure}
-In \Cref{fig_v_w}, a dot represents a smoothing operation and a square a
-direct inversion. The grid transfer operators are symbolized by lines.
 
 The main difference between geometric and algebraic multigrid techniques
 pertains to the method used
@@ -78,10 +85,12 @@ step because if the coarsening occurs too fast, convergence rates will
 decrease. However, if the coarsening is too slow, more memory may be 
 required to solve the problem. 
 
-\subsection{ML}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{ML Package of Trilinos}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 When using a smoothed aggregation scheme, the smoothed interpolation operators,
 $\bs{P}_k$, are the transpose of the coarsening operators,
-$\bs{R}_k=\bs{P}_k^T$. Therefore, when the $\bs{P}_k$ are built, the
+$\bs{R}_k=\bs{P}_k^T$. Therefore, when the $\bs{P}_k$ matrices are built, the
 coarsening operator is also known. First, the graph of the matrix is
 constructed: if element $(i,j)$ or $(j,i)$ of the matrix is non-zero, an edge
 is built between the vertex $i$ and the vertex $j$ \cite{ml_guide}. Second,
@@ -89,7 +98,7 @@ the vertices are
 aggregated. When using ML on a single processor, two aggregation schemes can
 be used: the uncoupled scheme or the maximally independent sets (MIS) scheme. 
 The uncoupled scheme tries to build aggregates of size $3^d$ where $d$ is the
-dimension of the problem. The algorithm works as follows \cite{mis}:
+dimension of the problem; its algorithm proceeds as follows \cite{mis}:
 \begin{description}
   \item[Step 1:] As long as there are points not adjacent to an aggregate:
     \begin{enumerate}
@@ -103,7 +112,7 @@ dimension of the problem. The algorithm works as follows \cite{mis}:
 The MIS scheme used in ML applies the MIS algorithm \cite{graph_coloring} to
 the graph of the matrix $\bs{A}^2$. These two coarsening 
 schemes use a fixed ratio of coarsening between levels. 
-
+%
 Once aggregation is done, a tentative prolongator matrix, $\bs{\tilde{P}}_k$ 
 is constructed \cite{mis}. A example of $\bs{\tilde{P}}_k$ is given by:
 \begin{equation}
@@ -117,16 +126,18 @@ is constructed \cite{mis}. A example of $\bs{\tilde{P}}_k$ is given by:
 \end{equation}
 This tentative prolongator could be used as prolongator but smoothing it
 allows to have a more robust scheme. Let $\bs{S}_k$ be a smoother, for example
-damped Jacobi, the prolongator matrix is given by:
+damped Jacobi. Then, the prolongator matrix is given by:
 \begin{equation}
   \bs{P}_k = \bs{S}_k \bs{\tilde{P}}_k.
 \end{equation}
 
-\subsection{AGMG}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\subsection{AGMG Package from ULB}
+%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 Unlike ML, the prolongator in AGMG is not smoothed; this results in a
-cheaper setup and a decrease in memory requirements \cite{agmg2}. However, as
-explained previously, the scheme could be less robust. To counteract this weakness, the
-aggregation scheme is more complicated. Coarsening algorithms that control
+cheaper setup and a decrease in memory requirements \cite{agmg2}. However,
+such a scheme could be less robust. To counteract this weakness, the
+aggregation scheme is more involved. Coarsening algorithms that control
 the size of the aggregates tends to produce a few badly shaped aggregates.
 Since the convergence of AMG is bounded by the worst aggregate, even a small 
 number of badly shaped aggregates can have a huge impact on
@@ -136,15 +147,15 @@ their quality is checked. Obviously, this increases the cost of the coarsening
 and it is thus important that the coarsening is fast enough. Such an 
 algorithm does not control the size of the aggregates, and therefore, it is 
 difficult to control the speed of coarsening. However, controlling the condition 
-number rather than the coarsening speed is a much more interesting feature. By 
+number rather than the coarsening speed is a more interesting feature. By 
 monitoring the condition number, bad aggregates will not be created and, instead, 
 a few aggregates below the target size may be generated. This  
-does not affect the efficiency of the method in an noticeable way \cite{agmg2}. 
+does not affect the efficiency of the method in a noticeable way \cite{agmg2}. 
 A simple way to create the aggregates would be to try exhaustively all the
 combinations, to compute their quality, and then to choose the optimal
-coarsening. In practice, this would be too costly and in AGMG, the aggregation 
+coarsening. In practice, this would be too costly and, in AGMG, the aggregation 
 is step done by a few passes of a pairwise aggregation algorithm. Each pass
-aggregates the variables two by to to allow a simple computation of the aggregate 
+aggregates the variables two by two to allow a simple computation of the aggregate 
 quality and to keep the cost per iteration low. The advantage of controlling the 
 condition number becomes even more important when a $K-$cycle or Krylov-cycle, is 
 used instead of the more common $V-$ or $W-$cycles. The difference between the 
