--- a/mip.tex
+++ b/mip.tex
@@ -1,144 +1,169 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\section{MIP on arbitrary polygonal cells} \label{sec_mip}
+\section{DSA on arbitrary polygonal cells} \label{sec_mip}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Solution Principle}
+\subsection{DSA Solution Principle}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-In this Section, we recall the MIP technique and extend it to arbitrary
-polygonal/polyhedral cells. As noted earlier, in thick diffusive
-configurations, standard iterative techniques applied to transport solves 
+As noted earlier, in thick diffusive configurations, standard iterative techniques 
+applied to transport solves 
 can be slowly converging. DSA can be employed to accelerate their convergence.
 The idea behind synthetic acceleration is that the error between the (yet
-unknown) transport solution and the latest iterate can be estimated from a
+unknown) transport solution and the current iterate can be estimated from a
 computationally less expensive process, yielding a correction term to be added
-to the latest iterate in order to improve the next iterate. In DSA, the
-corrective scalar flux contribution is sought through the following
-diffusion solve, where the source term is a scattering term due to the
-difference between the previous iterate scalar flux $\Phi^{(\ell)}$ and the
-newest scalar flux, obtained after a transport sweep, $\Phi^{(l+1/2)}$. The
-$(l+1/2)$ index indicates that the next iterate, $\Phi^{(l+1)}$ has not yet
-been fully obtained after the transport sweep, but will be diffusion-corrected:
+to the current iterate in order to improve the next iterate. In DSA, a
+corrective scalar flux contribution, $\delta \Phi$, is sought through the following 
+diffusion solve, 
 \begin{equation}
   \bs{A}\ \delta \Phi = \bs{\Sigma}\(\Phi^{(\ell+1/2)} - \Phi^{(\ell)}\).
 \end{equation}
-where $\bs{A}$ is the DSA matrix.
-Then, the next iterate is obtained as follows:
+where the source term is a scattering term due to the
+difference between the previous iterate scalar flux $\Phi^{(\ell)}$ and the
+newest scalar flux, $\Phi^{(\ell+1/2)}$, obtained after a single transport sweep. 
+The next scalar flux iterate is obtained by adding the scalar flux correction to
+the scalar flux obtained after a transport sweep:
 \begin{equation}
   \Phi^{(\ell+1)} = \Phi^{(\ell+1/2)}+\delta \Phi.
 \end{equation}
+$\bs{A}$ is the DSA matrix.
 Ideally, $\bs{A}$ should be SPD (such that efficient iterative techniques can 
 be employed in its linear solve) and easy to form (even on arbitrary grids).
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-\subsection{Modified Interior Penalty DSA}
+\subsection{Modified Interior Penalty DSA for polygons}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
-Now, we can discuss the Modified Interior Penalty as a DSA scheme \cite{mip}. 
+Now, we discuss the Modified Interior Penalty as a DSA scheme for arbitrary polygons. 
 This DSA scheme employs the same discontinuous finite elements used in the 
 transport discretization for the discretization of the diffusion operator. 
 MIP-DSA has been shown to be always stable for isotropic scattering on triangular 
-cells. It is based on Interior Penalty scheme (IP). This method applies
-directly the IP technique to the following diffusion update equation:
+cells \cite{mip}. The MIP diffusion solve is based on the standard Interior Penalty scheme (IP)
+\cite{ip}, with an appropriately modified penalty term. Consider 
+following diffusion update equation:
 \begin{align}
-  -\bn \mathrm{D} \bn \phi + \Sigma_a \phi &= Q_0 &\textrm{ for }\br \in
+  \left(-\bn \cdot \mathrm{D} \bn  + \Sigma_a \right) \delta \phi &= Q_0 &\textrm{ for }\br \in
   \mc{D}\\
-  \frac{1}{4}\phi - \frac{1}{2} \mathrm{D} \partial_n \phi & = 0 &\textrm{ for }
-  \br \in \partial \mc{D}^d\\
-  -\mathrm{D} \partial_n \phi &= J^{inc} & \textrm{ for } \br \in \partial
-  \mc{D}^r,
+  \frac{1}{4}\delta \phi - \frac{1}{2} \mathrm{D} \partial_n \delta \phi & = 0 &\textrm{ for }
+  \br \in \partial \mc{D} %^d \\
+  %-\mathrm{D} \partial_n \phi &= J^{inc} & \textrm{ for } \br \in \partial
+  %\mc{D}^r,
 \end{align}
-where $\mathrm{D}$ is the diffusion coefficient, $\partial \mc{D}^d$ is the
-boundary of the domain with Dirichlet condition, $\partial \mc{D}^r$ is the
-boundary of the domain with reflective condition, $Q_0=\Sigma_s
-\(\Phi^{(\ell+1/2)}-\Phi^{(\ell)}\)$, $J^{inc} = \sum_{\bo_d\cdot\bs{n}_b >0} w_d 
-|\bo_d \cdot \bs{n}_b| \delta \psi_d$, and $\partial_n = \bs{n}_e\cdot \bn$ where
+where $\mathrm{D}$ is the diffusion coefficient, $\Sigma_a$ is the absorption cross section, 
+%$\partial \mc{D}^d$ is the
+%boundary of the domain with Dirichlet condition, $\partial \mc{D}^r$ is the
+%boundary of the domain with reflective condition, 
+$Q_0=\Sigma_s\(\Phi^{(\ell+1/2)}-\Phi^{(\ell)}\)$, 
+%$J^{inc} = \sum_{\bo_m\cdot\bs{n}_b >0} w_m 
+%|\bo_m \cdot \bs{n}_b| \delta \psi_d$, 
+and $\partial_{n_e} = \bs{n}_e\cdot \bn$ where
 $\bs{n}_e$ is the normal unit vector associated with a given edge $e$ (on the
-boundary $\bs{n}_e = \bs{n}_b$). The only difference between IP and MIP is the
-penalty factor $\kappa_e^{IP}$ used for IP is replaced by a new penalty factor
-$\kappa_e^{MIP}$. Therefore, the weak form of MIP is given by:
+boundary $\bs{n}_e = \bs{n}_b$). 
+%The only difference between IP and MIP is the
+%penalty factor $\kappa_e^{IP}$ used for IP is replaced by a new penalty factor
+%$\kappa_e^{MIP}$. Therefore, 
+The weak form of MIP-DSA equations is given by:
 \begin{equation}
-b(\phi,\phi^*) = l(\phi^*)
+a(\delta \phi,\phi^*) = l(\phi^*)
 \label{mip}
 \end{equation}
+%
 with:
 \begin{equation}
 \begin{split}
-b(\phi,\phi^*) =& \(\Sigma_a \phi,\phi^*\)_{\mc{D}}+
-  (\mathrm{D}\bn\phi,\bn\phi^*)_{\mc{D}} + \(\kappa_e^{MIP} \llb\phi\rrb,
-\llb\phi^*\rrb\)_{E_h^i} + \(\llb\phi\rrb,\ldb\mathrm{D}\partial_n
+a(\delta \phi,\phi^*) =& \(\Sigma_a \delta \phi,\phi^*\)_{\mc{D}}+
+  (\mathrm{D}\bn\delta \phi,\bn\phi^*)_{\mc{D}} + \(\kappa_e^{MIP} \llb\delta \phi\rrb,
+\llb\phi^*\rrb\)_{E_h^i} + \(\llb\delta \phi\rrb,\ldb\mathrm{D}\partial_n
 \phi^*\rdb\)_{E_h^i} +\\
-& \(\ldb\mathrm{D}\partial_n \phi\rdb,\llb\phi^*\rrb\)_{E_h^i} +
+& \(\ldb\mathrm{D}\partial_n \delta \phi\rdb,\llb\phi^*\rrb\)_{E_h^i} +
 \(\kappa_e^{MIP}
-\phi,\phi^*\)_{\partial \mc{D}^d} -\frac{1}{2} \(\phi,\mathrm{D} \partial_n
+\delta \phi,\phi^*\)_{\partial \mc{D}^d} -\frac{1}{2} \(\delta \phi,\mathrm{D} \partial_n
 \phi^*\)_{\partial \mc{D}^d} - \frac{1}{2}\(\mathrm{D}\partial_n
-\phi,\phi^*\)_{\partial \mc{D}^d}
+\delta \phi,\phi^*\)_{\partial \mc{D}^d}
 \label{mip_b}
 \end{split}
 \end{equation}
+%
+and
+%
 \begin{equation}
-l(\phi^*) = (Q_0,\phi^*)_{\mc{D}}+ (J^{inc},\phi^*)_{\partial \mc{D}^r},
+l(\phi^*) = (Q_0,\phi^*)_{\mc{D}}+ (J^{inc},\phi^*)_{\partial \mc{D}^r} .
 \label{mip_l}
 \end{equation}
-where $(f,g)_{\mc{D}} = \sum_{K\in \mathbb{T}_h} \(f,g\)_K$, 
-$(f,g)_K = \int_K fg\ d\br$, $(f,g)_{E_h^i}=\sum_{e\in E_h^i}(f,g)_e$, 
-$(f,g)_e = \int_e fg\ ds$,
- $\mathbb{T}_h$ is the mesh used to discretize the domain
-$\mc{D}$ into nonoverlapping elements $K$, $E_h^i$ is the set of interior
-edges, $\phi$ and $\phi^* \in W_{\mc{D}}^h$, $W_{\mc{D}}^h=\{P \in
-L^2(\mc{D}); P|_{K}\in V_p(K), \forall K \in \mathbb{T}_h\}$, where $V_p(K)$
-is the space of polynomials of degree up to $p$ on element $K$, $\Sigma_a$ is 
-the absorption cross section, $\llb\phi\rrb = \phi^+ - \phi^-$ is the jump of 
-$\phi$ at the interface between two elements, 
-$\ldb\phi\rdb = \frac{\phi^+ + \phi^-}{2}$ is the mean of $\phi$ 
-at the interface between two elements, 
-$\phi^{\pm}=\lim_{s\rightarrow 0^{\pm}}\phi(\bs{r}+s\bs{n}_e)$, and
-$\kappa_e^{MIP} = \max\(\kappa_e^{IP},\frac{1}{4}\)$
+%
+The notations used are as follows:
+$(f,g)_{\mc{D}} = \sum_{K\in \mathbb{T}_h} \(f,g\)_K$, with the element integrals defined as 
+$(f,g)_K = \int_K fg\ d\br$; $(f,g)_{E_h^i}=\sum_{e\in E_h^i}(f,g)_e$, with the edge integrals defined as 
+$(f,g)_e = \int_e fg\ ds$. In the above, 
+ $\mathbb{T}_h$ denotes the partition of domain
+$\mc{D}$ into non-overlapping elements $K$, $E_h^i$ is the set of interior
+edges, $\delta \phi$ is the numerical solution for the diffusion correction and $\phi^*$ is any test function.
+Any entry $A_{ij}$ of matrix $\bs{A}$ is simply: $A_{ij}= a(b_j,b_i)$. Matrix $\bs{A}$ is SPD
+and thus can be solved using a preconditioned conjugate gradient technique.
+%$\in W_{\mc{D}}^h$, $W_{\mc{D}}^h=\{P \in
+%L^2(\mc{D}); P|_{K}\in V_p(K), \forall K \in \mathbb{T}_h\}$, where $V_p(K)$
+%is the space of polynomials of degree up to $p$ on element $K$,  
+%
+The jump and mean value of a variable $u$  at the interface between two elements is defined as follows:
+\begin{equation}
+\llb u \rrb = u^+ - u^- \text{ and } \ldb u\rdb = \frac{u^+ + u^-}{2} ,
+\end{equation}
+respectively.
+%
+The definition of the left/right values along a given edge $e$ is
+\begin{equation}
+u^{\pm}= \lim_{s\rightarrow 0^{\pm}}u(\bs{r}+s\bs{n}_e) .
+\end{equation}
+%
+The MIP penalty coefficient is given by
+\begin{equation}
+\kappa_e^{MIP} = \max\(\kappa_e^{IP},\frac{1}{4}\)
+\end{equation}
 with:
 \begin{equation}
 \kappa_e^{IP} = \left\{
 \begin{aligned}
-&\frac{c(p^+)}{2} \frac{\mathrm{D^+}}{h_{\bot}^+} + \frac{c(p^-)}{2}
+&\frac{c}{2} \frac{\mathrm{D^+}}{h_{\bot}^+} + \frac{c}{2}
 \frac{\mathrm{D}^-}{h_{\bot}^-} & \textrm{on interior edges, i.e., }
 e\in E_h^i\\
-&c(p) \frac{\mathrm{D}}{h_{\bot}} & \textrm{on boundary edges, i.e., } e
-\in\partial \mc{D}^d 
+&c \frac{\mathrm{D}}{h_{\bot}} & \textrm{on boundary edges, i.e., } e
+\in\partial \mc{D} %^d 
 \end{aligned}
 \right. 
 \end{equation}
-where $c(p)$ is given by $c(p) = 2p (p+1)$, $p$ is the polynomial order ($p=1$
-in this paper) and $h_{\bot}$ is the length of the cell in the direction
-orthogonal to the edge $e$. MIP yields only a correction for the scalar flux
-but by assuming that the angular dependence satisfies a diffusion expansion,
-the angular correction can be computed using:
-\begin{equation}
-  \varepsilon_d = \frac{1}{4\pi}(\phi-3\mathrm{D}\bn\phi\cdot \bo_d)
-\end{equation}
-This correction can be used when some of the boundary conditions are periodic
-or reflective.
-
-When PWLD finite elements are used instead of LD finite elements, the weak form 
-of MIP remains unchanged. But for general polygons, there is no 
+where $c$ is a constant (chosen to equal 4 here) and $h_{\bot}$ is the length of the cell in the direction
+orthogonal to the edge $e$. 
+%MIP yields only a correction for the scalar flux
+%but by assuming that the angular dependence satisfies a diffusion expansion,
+%the angular correction can be computed using:
+%\begin{equation}
+  %\varepsilon_d = \frac{1}{4\pi}(\phi-3\mathrm{D}\bn\phi\cdot \bo_d)
+%\end{equation}
+%This correction can be used when some of the boundary conditions are periodic
+%or reflective.
+%
+When PWLD finite elements are employed, there is no 
 simple way to compute $h_{\bot}$. To estimate $h_{\bot}$, we 
-assume that the polygonal cells are not too far from being regular polygonal 
-cells. In such case, if the cell has an even number of edges, the orthogonal 
+assume that the polygonal cells do not deviate too much from regular polygons. 
+In such case, if the cell has an even number of edges, the orthogonal 
 length equals two times the apothem, i.e., two times the segment between the 
 midpoint of a side of the polygon and the center of this polygon 
-$\(\textrm{apothem}=2\times \frac{\textrm{area}}{\textrm{perimeter}}\)$. If 
-the cell has an odd number of edges, the orthogonal length is given by the 
+$\(\textrm{apothem}=2\times \frac{\textrm{area}}{\textrm{perimeter}}\)$. 
+\textcolor{red}{I think you mean area and perimeter of the triangle formed by the edge $e$ and polygon the mid-point. Confirm.}
+If the cell has an odd number of edges, the orthogonal length is given by the 
 apothem plus the circumradius, i.e., the radius of the circle circumscribed to 
 the polygon $\(\textrm{circumradius}=\sqrt{\frac{2\times \textrm{area}}{N_V
-\sin\(\frac{2\pi}{N_V}\)}}\)$. Therefore, $h_{\bot}$ is given in
+\sin\(\frac{2\pi}{N_V}\)}}\)$. A summary of the definitions used for $h_{\bot}$ for 
+any polygon as a function of the number of vertices is given in
 \Cref{table_h_bot}.
 \begin{table}[H]
   \begin{center}
-    \caption{Orthogonal length of the cell for different cells.}
+    \caption{Orthogonal length $h_{\bot}$ for different polygons.}
     \begin{tabular}{|c|c|c|c|c|}
       \hline
-      Number of edges & 3 & 4 & $> 4$ and even & $> 4$ and odd \\
+      Number of vertices & 3 & 4 & $> 4$ and even & $> 4$ and odd \\
       \hline
       $h_{\bot}$ & $2 \times \frac{\textrm{area}}{L_e}$ &
 $\frac{\textrm{area}}{L_e}$ & $4\times
