--- a/transport.tex
+++ b/transport.tex
@@ -12,25 +12,25 @@ polygonal/polyhedral grids.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \subsection{The \sn Transport Equations}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-Given an angular quadrature set $\{\bo_d,w_d\}_{1\leq d\leq M}$, the one-group
+Given an angular quadrature set $\{\bo_m,w_m\}_{1\leq m \leq M}$, the one-group
 \sn transport equation with isotropic source and scattering is:
 \begin{equation}
-  \( \bo_d\cdot \bn + \Sigma_t(\br) \) \psi_d (\br) = \frac{1}{4\pi} \left( \Sigma_s
+  \( \bo_m\cdot \bn + \Sigma_t(\br) \) \psi_m (\br) = \frac{1}{4\pi} \left( \Sigma_s
   (\br) \phi(\br) + S (\br) \right), \ \textrm{ for } \br \in \mc{D},\
-  1 \leq d \leq M,
+  1 \leq m \leq M,
   \label{transport_sn}
 \end{equation}
-with $\psi_d(\br) = \psi(\br,\bo_d)$ the angular flux at position $\br$ in
-direction $\bo_d$, $\Sigma_t$ and $\Sigma_s$ the total and scattering cross
+with $\psi_m(\br) = \psi(\br,\bo_m)$ the angular flux at position $\br$ in
+direction $\bo_m$, $\Sigma_t$ and $\Sigma_s$ the total and scattering cross
 sections, respectively, and $\mc{D}$ the spatial domain. The scalar flux is
 defined and evaluated as follows:
 \begin{equation}
-  \phi(\br) \equiv \int_{4\pi} \psi(\br,\bo) d\bo \approx \sum_{d=1}^M w_d
-  \psi_d (\br).
+  \phi(\br) \equiv \int_{4\pi} \psi(\br,\bo) d\bo \approx \sum_{m=1}^M w_m
+  \psi_m (\br).
 \end{equation}
-For brevity, we assume only incoming boundary conditions, that is, $\psi_d(\br_b) =
-\psi_d^{inc}(\br_b)$ for any point on the inflow boundary: $\br_b \in \partial \mc{D}_d^-
-= \{\partial \mc{D} \textrm{ such that }\bo_d \cdot \bs{n}_b <0\}$, with
+For brevity, we assume only incoming boundary conditions, that is, $\psi_m(\br_b) =
+\psi_m^{inc}(\br_b)$ for any point on the inflow boundary: $\br_b \in \partial \mc{D}_m^-
+= \{\partial \mc{D} \textrm{ such that }\bo_m \cdot \bs{n}_b <0\}$, with
 $\bs{n}_b = \bs{n}(\br_b)$ the outward unit normal vector at $\br_b$. 
 \Cref{transport_sn} can be written in a compact form using operators:
 \begin{align}
@@ -41,12 +41,12 @@ where $\Psi$ is the vector of angular fluxes, $\Phi$ the scalar flux,
 $q$ is the total (scattering+external) source $\bs{L}$ is the streaming
 operator, $\bs{\Sigma}$ is the scattering matrix, $\bs{M}$ is the
 moment-to-direction operator, and $\bs{D}$ is the direction-to-moment
-operator. $\bs{L} = diag(\bs{L}_1,\hdots,\bs{L}_d,\hdots,\bs{L}_M)$ is 
+operator. $\bs{L} = diag(\bs{L}_1,\hdots,\bs{L}_m,\hdots,\bs{L}_M)$ is 
 a diagonal operator; given a total source $q$, one can solve independently 
 for the resulting angular
 fluxes in all directions. The action of $\bs{L}^{-1}$ is often referred to as
 a transport sweep when discontinuous spatial approximations are
-employed because, for any direction $\bo_d$, the action of $\bs{L}_d^{-1}$ can
+employed because, for any direction $\bo_m$, the action of $\bs{L}_m^{-1}$ can
 be obtained by traversing the mesh (i.e., sweeping) in a specific ordering of
 the cells, thus requiring only to solve a small linear system of equations,
 cell by cell. The order in which the elements are solved constitutes the graph
@@ -71,7 +71,7 @@ solve the system of equations:
 \begin{equation}
   \(\bs{I} - \bs{DL}^{-1}\bs{M \Sigma}\) \Phi = \bs{DL}^{-1}S
 \end{equation}
-SI and the GMRes-based transport solves require transport sweeps (action of $\bs{L}^{-1}$).
+SI and GMRes-based transport solves require transport sweeps (action of $\bs{L}^{-1}$).
 When the scattering ratio
 $c=\frac{\Sigma_s}{\Sigma_t}$ tends to one in optically thick domains, the
 number of SI and GMRes iterations can become large. To speed up convergence, a DSA
@@ -83,48 +83,47 @@ polygonal grids.
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 The domain $\mc{D}$ is partitioned into arbitrary polygons. For 
-a given streaming direction $\bo_d$, the discontinuous finite
-element formulation, on a given element $K$ ,is:
+a given streaming direction $\bo_m$, the discontinuous finite
+element formulation, on a given element $K$, is:
 \begin{equation}
-  -\int_{K} \(\psi_d \bo_d \cdot \bn b + \Sigma_t \Psi_d b \)\ d\br +
-  \int_{\partial K^+} \bo_d \cdot \bs{n} \Psi_d b\ d\br = \int_{K} qb\ d\br +
-  \int_{\partial K^{-}} |\bo_d \cdot \bs{n}| \psi_d^{\uparrow}b \ d\br,
+  -\int_{K} \(\psi_m \bo_m \cdot \bn \tf + \Sigma_t \Psi_m \tf \)\ d\br +
+  \int_{\partial K^+} \bo_m \cdot \bs{n} \Psi_m \tf \ d\br = \int_{K} q\, \tf \ d\br +
+  \int_{\partial K^{-}} |\bo_m \cdot \bs{n}| \psi_m^{\uparrow}\, \tf \ d\br,
   \label{transport_int}
 \end{equation}
-where $b$ represents a generic finite element basis function, $\partial K^{-}$ 
+where $\tf$ represents a generic finite element basis function, $\partial K^{-}$ 
 is the inflow face of element $K$, $\partial K^{+}$ is the outflow face of 
 element $K$. The angular flux values on an inflow face, denoted by 
-$\psi_d^{\uparrow}$ in \cref{transport_int}, are taken from the upwind neighbor 
+$\psi_m^{\uparrow}$ in \cref{transport_int}, are taken from the upwind neighbor 
 element of that face.
 
-Now, we define the basis functions, $b$, for the PWLD discretization. First, we
+Now, we define the basis functions, $\tf$, for the PWLD discretization. First, we
 introduce a within-cell point $c$ inside the polygon in 2D. The coordinates 
 of $c$ are weighted averages of the vertex coordinates:
 \begin{equation}
-  u_c = \sum_{j=1}^{N_V} \alpha_j u_j,
+  u_c = \sum_{i=1}^{N_V} \alpha_i u_i,
 \end{equation}
 where $u=x$ or $y$, $N_V$ is the number of vertices for the cell under
-consideration, and the (positive) weights $\alpha_j$ are such that $\sum_{j=1}^{N_V} \alpha_j =1$. 
+consideration, and the (positive) weights $\alpha_i$ are such that $\sum_{i=1}^{N_V} \alpha_i =1$. 
 The basis function at vertex $j$ is defined by 
 \cite{pwld_2d}:
 \begin{equation}
-  b_j(x,y) = t_j(x,y) + \alpha_j t_c(x,y),
+  b_i(x,y) = t_i(x,y) + \alpha_i t_c(x,y),
 \end{equation}
-where $t_j(x,y)$ is a linear function such that $t_j(x,y)$ is unity at vertex
-$j$ and zero at $j-1$, $j+1$, and $c$. The $t_c(x,y)$ function is a ``tent''
+where $t_i(x,y)$ is a linear function such that $t_i(x,y)$ is unity at vertex
+$i$ and zero at vertices $i-1$, $i+1$, and $c$. The $t_c(x,y)$ function is a ``tent''
 function in the interior of the cell; it is unity at the within-cell point $c$
-and zero at all the vertices of the cell. The PWLD method employs a notion of 
-sub-cells on each arbitrary polygon; the number of PWLD basis functions is 
-equal to the number of vertices in the polygon. In this paper, the arbitrary
-positive weights $\alpha_j$ are chosen to be $\frac{1}{N_V}$, thus, on a
-quadrilateral cell, one has $\alpha_j =\frac{1}{4}$. Finally, note that on
+and zero at all the vertices of the cell. The number of PWLD basis functions is 
+equal to the number of vertices in the polygon (i.e., $1 \le i \le N_v$). In this paper, the arbitrary
+positive weights $\alpha_i$ are chosen to be $\frac{1}{N_V}$; for example, on a
+quadrilateral cell, we employ $\alpha_i =\frac{1}{4}$. Finally, note that on
 triangular cells, the PWLD basis functions reduce to the
-standard Linear Discontinuous (LD) basis functions if $\alpha_j =
-\frac{1}{3}$. Given the definition of the PWLD
+standard Linear Discontinuous (LD) basis functions if $\alpha_i = \frac{1}{3}$. 
+Given the definition of the PWLD
 finite elements, it may seem complicated to build the elementary transport 
 matrices on an arbitrary polygonal cell but the construction of such matrices
 can be greatly simplified using the notion of ``sub-cells'', where a ``sub-cell'',
 in 2D, is defined as the triangular cell linking an edge of the polygonal cell to its
 within-cell point. Note that these ``sub-cells'' are never created as part of the 
-polygonal grids; they are just a means to easily compute the elementary matrices of 
-a polygonal cell by loop over its sub-cells.
+polygonal grid; they are just \textcolor{red}{a simple implementation means of computing}
+the elementary matrices of a polygonal cell by loop over its sub-cells. 
